# media-gallery

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  Makefile  MediaGallery.sln  MediaGallery.vcxproj  MediaGallery.vcxproj.filters  PhotoGallery.sln  PhotoGallery.vcxproj  PhotoGallery.vcxproj.filters  README.md  build.bat
.github/workflows/: build.yml
cmake/: ffmpeg.cmake  ffmpeg_sources.txt  libass.cmake
src/: MediaGallery.rc  PhotoGallery.rc  app.manifest  decoder.h  decoder_gdiplus.cpp  decoder_wic.cpp  filmstrip.cpp  filmstrip.h  main.cpp  player_stub.cpp  resource.h
tools/: vendor_player.cmake
